--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/IsbatBInHossain/chess-game-server/issues"
   },
-  "homepage": "https://github.com/IsbatBInHossain/chess-game-server#readme"
+  "homepage": "https://github.com/IsbatBInHossain/chess-game-server#readme",
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0"
+  }
 }
