--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx prisma generate && npx prisma migrate deploy && node server/server.js",
+    "dev": "nodemon server/server.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "nodemon": "^3.1.10",
     "prisma": "^6.9.0"
   }
 }
