--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "redis": "^5.5.6",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
