--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npx prisma generate && npx prisma migrate deploy && node server/server.js",
-    "dev": "nodemon server/server.js"
+    "dev": "nodemon server/server.js",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,10 @@
     "ws": "^8.18.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
-    "prisma": "^6.9.0"
+    "prisma": "^6.9.0",
+    "supertest": "^7.1.1"
   }
 }
