fix: clients map not passing correctly in game functions

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npx prisma generate && npx prisma migrate deploy && node server/server.js",
     "dev": "nodemon server/server.js",
-    "test": "cross-env NODE_ENV=test jest --detectOpenHandles"
+    "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles"
   },
   "repository": {
     "type": "git",
