--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "friendly-username-generator": "^2.0.4",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "redis": "^5.5.6",
+    "uuid": "^11.1.0",
     "ws": "^8.18.2"
   },
   "devDependencies": {
