--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - REDIS_URL=${REDIS_URL}
       - JWT_SECRET=${JWT_SECRET}
       - PORT=${PORT}
+      - FRONTEND_URL=${FRONTEND_URL}
 
   db:
     image: postgres:16-alpine
